--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         padding: 0 10%;
       }
       .project-card h3,p{
-        padding-bottom: 15px;
+        padding-bottom: 25px;
       }
       .card{
         background: var(--card-bg);
@@ -215,11 +215,10 @@
 
       .github-link {
         position: absolute; 
-        bottom: 30px; 
+        bottom: 15px; 
         left: 50%; 
         transform: translateX(-50%); 
         display: inline-block;
-        margin-top: 15px;
         color: var(--accent-color);
         text-decoration: none;
         font-weight: 700;
@@ -367,6 +366,7 @@
     <div class="projects-grid">
 
       <div class="project-card" data-aos="fade-up">
+        <img src="images/bank.jpg" alt="Bank" class="project-img">
         <h3>Bank System</h3>
         <p>Bank manger dashboard implemented many Design Patterns.</p>
         <a
@@ -376,24 +376,40 @@
           >View Repo</a
           >
       </div>
+
+      <div class="project-card" data-aos="fade-up" data-aos-delay="100">
+        <img src="images/saj.jpg" alt="sajelha" class="project-img">
+            <h3>Sajelha Dashboard</h3>
+            <p>Complaintes Admin and Employees Governmental platform.</p>
+            <a href="https://github.com/jenny-kaspo/Sajelha-Dashboard" target="_blank" class="github-link">View Repo</a>
+        </div>
       
-         <div class="project-card" data-aos="fade-up" data-aos-delay="200">
-        <h3>Khotwa Dashboard</h3>
-        <p>Admin panel for Khotwa platform.</p>
+        
+
+       <div class="project-card" data-aos="fade-up">
+        <img src="images/res.jpg" alt="Restaurant" class="project-img">
+        <h3>Napolitano Website</h3>
+        <p>Dynamic authentic italian restaurant website.</p>
         <a
-          href="https://github.com/jenny-kaspo/khotwa-dashboard"
+          href="https://github.com/jenny-kaspo/Napolitano-Website"
+          target="_blank"
+          class="github-link"
+          >View Repo</a
+          >
+      </div>
+
+         <div class="project-card" data-aos="fade-up" data-aos-delay="200">
+        <h3>Khota Platform</h3>
+        <p>Admin panel for Khota volunteering platform.</p>
+        <a
+          href="https://github.com/jenny-kaspo/Khota-Dashboard"
           target="_blank"
           class="github-link"
           >View Repo</a
         >
       </div>
-         <div class="project-card" data-aos="fade-up" data-aos-delay="100">
-            <h3>Web Applications</h3>
-            <p>Complaintes Admin and Employees Governmental platform.</p>
-            <a href="https://github.com/jenny-kaspo/web-applications" target="_blank" class="github-link">View Repo</a>
-        </div>
 
-              <div class="project-card" data-aos="fade-up">
+        <div class="project-card" data-aos="fade-up">
         <!-- <img src="images/binary-game-preview.jpg" alt="Binary Game" class="project-img"> -->
         <h3>Binary Game</h3>
         <p>Interactive logic training game with AI search algorithms like UCS, A* and Climbing Hill.</p>
