--- a/index.html
+++ b/index.html
@@ -430,6 +430,8 @@
           class="github-link"
           >View Repo</a
         >
+      </div>
+     
 
     <footer>
       <div data-aos="zoom-in">
