--- a/index.html
+++ b/index.html
@@ -194,6 +194,22 @@
         color: var(--accent-color);
         margin-right: 10px;
       }
+      .r-button{
+         transform: translateX(-50%); 
+        display: inline-block;
+        color: var(--accent-color);
+        text-decoration: none;
+        font-weight: 700;
+        border: 2px solid var(--accent-color);
+        padding: 8px 20px;
+        border-radius: 50px;
+        transition: 0.3s;
+        padding: 15px 40px;
+        font-size: 1.1rem;
+        margin-top: 30px;
+        margin-left: 100px;
+        box-shadow: 0 10px 10px rgba(189, 139, 22, 0.2);
+      }
 
       .cta-button {
         display: inline-block;
@@ -286,8 +302,16 @@
                 <li><a href="tel:+96300000000"><i class="fas fa-phone"></i> +963 938585684</a></li>
                 <li><a href="https://github.com/jenny-kaspo" target="_blank"><i class="fab fa-github"></i> github.com/jenny-kaspo</a></li>
         </ul>
+         <a
+          href="https://drive.google.com/file/d/1H4novLTFQD3uGFHggmE_0jJVdM7m2ITh/view?usp=drive_link"
+          class="r-button"
+        >
+         View Resume
+        </a>
       </div>
+      
     </section>
+   
 
     <div
       class="grid-container"
