--- a/index.html
+++ b/index.html
@@ -298,12 +298,12 @@
         <ul class="quick-contact">
 
             <ul class="quick-contact">
-              <li><a href="mailto:jenny.kaspo@example.com"><i class="fas fa-envelope"></i> jennykaspo2003@gmail.com</a></li>
+              <li><a href="mailto:jenny.kaspo@example.com"><i class="fas fa-envelope"></i> jennykasbo@gmail.com</a></li>
                 <li><a href="tel:+96300000000"><i class="fas fa-phone"></i> +963 938585684</a></li>
                 <li><a href="https://github.com/jenny-kaspo" target="_blank"><i class="fab fa-github"></i> github.com/jenny-kaspo</a></li>
         </ul>
          <a
-          href="https://drive.google.com/file/d/1H4novLTFQD3uGFHggmE_0jJVdM7m2ITh/view?usp=drive_link"
+          href="https://drive.google.com/file/d/1u91xc8S6sfIWgpyLNGP2vALxxLxs953T/view?usp=sharing"
           class="r-button"
         >
          View Resume
@@ -415,10 +415,10 @@
         <h3>Napolitano Website</h3>
         <p>Dynamic authentic italian restaurant website.</p>
         <a
-          href="https://github.com/jenny-kaspo/Napolitano-Website"
+          href="https://jenny-kaspo.github.io/Napolitano-Website/"
           target="_blank"
           class="github-link"
-          >View Repo</a
+          >View Website</a
           >
       </div>
 
@@ -471,7 +471,7 @@
         </a>
       </div>
       <p style="margin-top: 50px; opacity: 0.5">
-        Copyright &copy; 2026 Jenny Kasbo | Software engineer Developer
+        &copy; 2026 Jenny Kasbo | Software Engineer | Web Developer
       </p>
     </footer>
 
